[tool.poetry]
name = "numbguess"
version = "0.1.0"
description = "Simple number guessing game"
authors = ["Jakkaphat <gunt@guntxjakka.me>"]
license = "MIT"

[tool.poe.tasks]
build = {script = "build:main"}

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pyinstaller = "^4.10"
requests = "^2.27.1"


[build-system]
requires = ["poetry-core>=1.1.0a7"]
build-backend = "poetry.core.masonry.api"
